// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsViews ErrorsStatusbar displays error 1`] = `
<div>
  <div
    class="sc-bdVaJa kwzqrW"
  >
    <span
      class="sc-eLExRp jamDnN"
      title="Test.Error: Test error description"
    >
      <i
        class="sc-kUaPvJ duoQTJ fa fa-exclamation-triangle"
      />
       
      Test.Error: Test error description
    </span>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsStatusbar displays nothing if no error 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="sc-esOvli gURtOB"
  >
    <div
      class="sc-cmthru rLwCZ"
    >
      <div
        class="sc-hMFtBS bSDFOR"
      >
        <div
          class="sc-bMVAic sc-iujRgT jGKvAY"
        >
          ERROR
        </div>
        <h4
          class="sc-daURTG jAANXD"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="sc-cLQEGU laMIkr"
      >
        <pre
          class="sc-lkqHmb efnVpi"
        >
          not found
        </pre>
      </div>
      <div
        class="sc-hORach hcXFqp"
      >
        <a
          class="sc-gqPbQI djBeCA"
        >
          <i
            class="sc-gPWkxV hffcmY fa fa-play-circle-o"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsView does displays an error 1`] = `
<div>
  <div
    class="sc-esOvli gURtOB"
  >
    <div
      class="sc-cmthru rLwCZ"
    >
      <div
        class="sc-hMFtBS bSDFOR"
      >
        <div
          class="sc-bMVAic sc-iujRgT jGKvAY"
        >
          ERROR
        </div>
        <h4
          class="sc-daURTG jAANXD"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="sc-cLQEGU laMIkr"
      >
        <pre
          class="sc-lkqHmb efnVpi"
        >
          Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
